# recipe

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  run.html  run.js  test_parser.js
docs/lib/: lora.js  materialize.js  safetensors.js  targz.js  test_e2e.mjs  test_lora.mjs  test_safetensors.mjs
src/mlrecipe/: __init__.py  cli.py  materialize.py
src/recipe/: __init__.py  cli.py  materialize.py  recipe.py
tests/: test_cli.py  test_materialize.py  test_recipe.py
