[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlrecipe"
version = "0.1.0"
description = "Ship model recipes, not weights. ~1000x smaller fine-tune distribution."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mlrecipe contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "safetensors>=0.4",
    "huggingface_hub>=0.20",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
recipe = "mlrecipe.cli:main"

[project.urls]
Homepage = "https://github.com/shiahonb777/mlrecipe"
Issues = "https://github.com/shiahonb777/mlrecipe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlrecipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::RuntimeWarning:numpy",
    "ignore::RuntimeWarning",
]
